# MinecraftModPackCLI

./: .gitignore  0.5.0_plan.md  LICENSE  README.md  example_config.toml  main_v2.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ask-a-question.md  bug_report.md  feature_request.md
.github/workflows/: issues.yml  publisher.yml
src/: __init__.py  __main__.py
src/cli/: __init__.py  app.py  commands.py  options.py  ui.py
src/core/: __init__.py  builder.py  config.py
src/models/: __init__.py  config.py  dependency.py  manifest.py  mod.py
src/services/: __init__.py  filesystem.py  modrinth.py
src/utils/: __init__.py  errors.py  logging.py
