[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MinecraftModpackCLI"
version = "0.5.0"
description = "A tool to make easier creating and releasing modpacks"
readme = "README.md"
license = "MIT"
authors = ["Dtar380"]
maintainers = ["Dtar380"]
homepage = "https://github.com/dtar380/MinecraftModpackCLI"
repository = "https://github.com/dtar380/MinecraftModpackCLI"
keywords = ["minecraft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Installation/Setup"
]
packages = [{ include = "src" }]

[tool.poetry.urls]
"Homepage" = "https://github.com/dtar380/MinecraftModpackCLI"
"Repository" = "https://github.com/dtar380/MinecraftModpackCLI"
"Bug Tracker" = "https://github.com/Dtar380/MinecraftModpackCLI/issues"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
click = "^8.3.0"
toml = "^0.10.2"

[tool.poetry.scripts]
MinecraftModpackCLI = "src.__main__:main"
